added some sitebar websites

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,17 @@
         `layout: page` in the front-matter. See readme for usage.
       {% endcomment %}
 
+      <a class="sidebar-nav-item" href="http://x64dbg.com">x64dbg</a>
+      <a class="sidebar-nav-item" href="http://releases.x64dbg.com">Download</a>
+      <a class="sidebar-nav-item" href="http://source.x64dbg.com">Source</a>
+      <a class="sidebar-nav-item" href="http://donate.x64dbg.com">Donate</a>
+      <a class="sidebar-nav-item" href="http://help.x64dbg.com">Documentation</a>
+      <a class="sidebar-nav-item" href="http://wiki.x64dbg.com">Wiki</a>
+      <a class="sidebar-nav-item" href="http://issues.x64dbg.com">Issues</a>
+      <a class="sidebar-nav-item" href="http://faq.x64dbg.com">FAQ</a>
+      <a class="sidebar-nav-item" href="http://contribute.x64dbg.com">Contribute</a>
+      <a class="sidebar-nav-item" href="http://telegram.x64dbg.com">Telegram</a>
+
       {% assign pages_list = site.pages %}
       {% for node in pages_list %}
         {% if node.title != null %}
