--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,24 @@ layout: default
   {{ content }}
 </div>
 
+<div id="disqus_thread"></div>
+<script>
+    var disqus_config = function () {
+        this.page.url = '{{ site.baseurl }}{{ page.url }}';
+        this.page.title = '{{ page.title }}';
+    };
+    */
+    (function() {  // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        
+        s.src = '//x64dbg.disqus.com/embed.js';
+        
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
