--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 <div id="disqus_thread"></div>
 <script>
     var disqus_config = function () {
-        this.page.url = '{{ site.baseurl }}{{ page.url }}';
+        this.page.url = '{{ site.url }}{{ page.url }}';
         this.page.title = '{{ page.title }}';
     };
     */
