--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@ layout: default
   {{ content }}
 </div>
 
-<div id="disqus_thread">
-  <h2 id="comments">Comments</h2>
-</div>
+<h2 id="comments">Comments</h2>
+
+<div id="disqus_thread"></div>
 <script>
     var disqus_config = function () {
         this.page.url = '{{ site.url }}{{ page.url }}';
