--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,6 +28,7 @@ layout: default
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 
+{% if site.related_posts.length > 0 %}
 <div class="related">
   <h2>Related Posts</h2>
   <ul class="related-posts">
@@ -43,3 +44,4 @@ layout: default
     {% endfor %}
   </ul>
 </div>
+{% endif %}
