--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,8 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-49042315-6', 'auto');
+    ga('require', 'linkid', 'linkid.js');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
   </script>
 </head>
