--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
+
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+  <!-- SEO -->
+  <meta name="description" content="{{ site.description }}">
+  <meta name="author" content="">
 
   <title>
     {% if page.title == "Home" %}
