added looking for writers to description!

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead">{{ site.description }}</p>
+      <p class="lead">{{ site.description }}<br><small><a href="http://x64dbg.com/blog/2016/07/09/Looking-for-writers.html">Looking for writers!</a></small></p>
     </div>
 
     <nav class="sidebar-nav">
