--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,9 @@
           {{ site.title }}
         </a>
       </h1>
-      <p class="lead">{{ site.description }}<br><small style="color: rgba(255,255,255,.5);"><a href="http://x64dbg.com/blog/2016/07/09/Looking-for-writers.html">Looking for writers!</a></small></p>
+      <p class="lead">{{ site.description }}
+        <small><a href="/blog/2016/07/09/Looking-for-writers.html">Looking for writers!</a></small>
+      </p>
     </div>
 
     <nav class="sidebar-nav">
