--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,8 @@
         </a>
       </h1>
       <p class="lead">{{ site.description }}
-        <small><a href="/blog/archive.html">Archive</a></small>
+        <small><a href="/blog/archive.html">Archive</a></small><br>
+        <br>
         <small><a href="/blog/2016/07/09/Looking-for-writers.html">Looking for writers!</a></small>
       </p>
     </div>
