--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,13 @@
       {{ content }}
     </div>
 
+    <script>
+    (function () {
+      'use strict';
+      anchors.options.placement = 'left';
+      anchors.add('.post > h2, .post > h3, .post > h4, .post > h5, .post > h6');
+    })();
+    </script>
+
   </body>
 </html>
