--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/public/css/hyde.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700%7CAbril+Fatface">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Sans:400,400italic,700%7CAbril+Fatface">
 
   <!-- Icons -->
   <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
