--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,7 +14,7 @@
     </div>
 
     <nav class="sidebar-nav">
-      <a class="sidebar-nav-item" href="http://x64dbg.com">Home</a>
+      <a class="sidebar-nav-item" href="https://x64dbg.com">Home</a>
       <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Blog</a>
       <a class="sidebar-nav-item" href="http://releases.x64dbg.com">Download</a>
       <a class="sidebar-nav-item" href="http://source.x64dbg.com">Source</a>
