--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
     };
 
     (function() {  // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
+        var d = document, s = d.createElement('script'); s.async = 1;
         
         s.src = '//x64dbg.disqus.com/embed.js';
         
