--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>
-        <a href="{{ site.baseurl }}">
+        <a href="{{ site.baseurl }}/">
           {{ site.title }}
         </a>
       </h1>
@@ -15,11 +15,11 @@
 
     <nav class="sidebar-nav">
       <a class="sidebar-nav-item" href="https://x64dbg.com">Home</a>
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Blog</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}/">Blog</a>
       <a class="sidebar-nav-item" href="http://releases.x64dbg.com">Download</a>
       <a class="sidebar-nav-item" href="http://source.x64dbg.com">Source</a>
       <a class="sidebar-nav-item" href="http://help.x64dbg.com">Documentation</a>
-      <a class="sidebar-nav-item" href="http://donate.x64dbg.com">Donate</a>
+      <a class="sidebar-nav-item" href="https://github.com/sponsors/mrexodia?metadata_source=x64dbg-blog">Donate</a>
       <a class="sidebar-nav-item" href="http://wiki.x64dbg.com">Wiki</a>
       <a class="sidebar-nav-item" href="http://issues.x64dbg.com">Issues</a>
       <a class="sidebar-nav-item" href="http://faq.x64dbg.com">FAQ</a>
